--- a/wpa.conf
+++ b/wpa.conf
@@ -1,3 +1,7 @@
 country=US
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
+network={
+    ssid="eero"
+    psk="5E99BE6AC6"
+}
